...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.lesson.LessonFragment">

    <ScrollView
        android:id="@+id/lesson_fragment_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/lesson1_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/primary"
                        android:text="Adverbs"
                        android:textColor="@color/white"
...
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/lesson2_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="16dp"
                        android:background="@color/primary"
                        android:text="Alphabets"
                        android:textColor="@color/white"
...
                    android:id="@+id/lesson3_lesson"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/lesson3_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="20dp"
                        android:background="@color/primary"
                        android:text="Attachments"
                        android:textColor="@color/white"
...
                    android:id="@+id/lesson4_lesson"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/lesson4_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="20dp"
                        android:background="@color/primary"
                        android:text="Numbers"
                        android:textColor="@color/white"
...
                    android:id="@+id/lesson5_lesson"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/lesson5_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="20dp"
                        android:background="@color/primary"
                        android:text="Pronouns"
                        android:textColor="@color/white"
...
