<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lesson_info_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/include5"
        layout="@layout/sub_screen_action_bar" />

    <TextView
        android:id="@+id/lesson_text_title"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text=" "
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include5" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/lesson_gif_imageView"
        android:layout_width="239dp"
        android:layout_height="256dp"
        android:src="@drawable/alpha_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_text_title" />

    <Button
        android:id="@+id/check_translator_info_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:text="Check"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_info_defcontent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/lesson_info_definition_title"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="Definition"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_gif_imageView" />

    <TextView
        android:id="@+id/lesson_info_defcontent"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text=" "
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_info_definition_title" />

</androidx.constraintlayout.widget.ConstraintLayout>