<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/translator_lesson_verify_constraint"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/background">

    <include
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/camera_type_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Front Camera"
            android:textColor="@color/white"
            android:textSize="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/switch_camera_verify_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:paddingLeft="15dp"
...
